--- a/bigcommerce_odoo_integration/views/sale_order.xml
+++ b/bigcommerce_odoo_integration/views/sale_order.xml
@@ -9,9 +9,11 @@
                 <header>
                     <button name="exportordertobigcommerce" type="object" string="Export Order"
                             attrs="{'invisible': ['|',('state', '!=','sale'),('big_commerce_order_id','!=',False)]}" groups="bigcommerce_odoo_integration.group_hide_export_button"/>
-                    <button name="get_shipped_qty" type="object" string="Shipped Qty"/>
-                    <button name="update_order_from_bc_to_odoo" type="object" string="Update Order"
-                            attrs="{'invisible': [('big_commerce_order_id','=',False)]}"/>
+                    <button name="get_shipped_qty" type="object" string="Shipped Qty" />
+                    <button name="update_order_from_bc_to_odoo" type="object" string="Update Order BC To Odoo"
+                            attrs="{'invisible': [('big_commerce_order_id','=',False)]}" />
+                    <button name="update_order_from_odoo_to_bc" type="object" string="Update Order Odoo To BC"
+                            attrs="{'invisible': [('big_commerce_order_id','=',False)]}" groups="bigcommerce_odoo_integration.group_hide_export_button"/>
                 </header>
                 <xpath expr="//field[@name='payment_term_id']" position="after">
                     <field name="bigcommerce_store_id"/>
