--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -293,15 +293,14 @@
                             <field name="product_id"/>
                             <field name="product_qty"/>
                             <!--                            <field name="product_uom"/>-->
-
-                            <field name="price_unit"/>
+                            <field name="before_disc_price_unit"/>
                             <field name="discount"/>
+                            <field name="price_unit"/>
                             <field name="taxes_id" widget="many2many_tags"/>
                             <field name="price_subtotal"/>
                         </group>
                         <group>
                             <field name="date_planned"/>
-                            <field name="disc_price_unit"/>
                             <field name="qty_received"/>
                             <field name="qty_invoiced"/>
                             <field name="status_id"/>
