[FIX][#19151] Made Code required in white glove
(cherry picked from commit e99d3194cc86bc8c67221852aae7aba12a862134)

--- a/bista_sale/views/white_glove_type_view.xml
+++ b/bista_sale/views/white_glove_type_view.xml
@@ -8,7 +8,7 @@
             <form>
                 <sheet>
                     <group>
-                         <field name="code" />
+                         <field name="code" required="1"/>
                         <field name="name" />                      
                     </group>
                 </sheet>
@@ -21,7 +21,7 @@
         <field name="model">white.glove.type</field>
         <field name="arch" type="xml">
             <tree>
-                 <field name="code" />
+                 <field name="code" required="1"/>
                 <field name="name" />               
 
             </tree>
