--- a/bista_sale/views/stock_picking_view.xml
+++ b/bista_sale/views/stock_picking_view.xml
@@ -24,7 +24,7 @@
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code', '!=', 'PICK')]}" />
             </xpath>
-            <field name="qty_done" position="before">
+            <field name="product_uom_qty" position="after">
                 <field name="demand_qty" force_save="1"/>
             </field>
 
