--- a/bista_bigcommerce_extend/views/stock_picking_view.xml
+++ b/bista_bigcommerce_extend/views/stock_picking_view.xml
@@ -23,7 +23,7 @@
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code', '!=', 'PICK')]}" />
             </xpath>
-            <field name="qty_done" position="before">
+            <field name="product_uom_qty" position="before">
                 <field name="demand_qty" force_save="1" />
             </field>
             <field name="product_id" position="after">
