[FIX] - Change Request #19333 - update source field from customer to lead to quotation
(cherry picked from commit 9a334f8afca7e87d4f8dbafde8b9e2c1f7237509)

--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -33,8 +33,14 @@
             <xpath expr="//page[@name='lead']//field[@name='campaign_id']" position="attributes">
                 <attribute name="string">Sales Campaign</attribute>
             </xpath>
-            <xpath expr="//page[@name='extra']//field[@name='campaign_id']" position="attributes">
+            <xpath expr="//page[@name='extra']//field[@name='campaign_id']" position="replace">
                 <attribute name="string">Sales Campaign</attribute>
+            </xpath>
+            <xpath expr="//page[@name='lead']//field[@name='referred']" position="after">
+                <field name="referring_organization"/>
+            </xpath>
+            <xpath expr="//page[@name='extra']//field[@name='referred']" position="after">
+                <field name="referring_organization"/>
             </xpath>
             <xpath expr="//field[@name='user_id']" position="attributes">
                 <attribute name="string">Owner</attribute>
