--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -66,12 +66,13 @@
                 </page>
             </xpath>
             <xpath expr="//notebook" position="inside">
-                <page name="important_details" string="Imp Details">
+                <page name="important_details" string="Lead Details">
                     <group>
                         <group>
                             <field name="source"/>
                             <field name="source_notes"/>
                             <field name="referal_source"/>
+                            <field name="referring_organization"/>
                             <separator string="Products Purchase"/>
                         </group>
                     </group>
