--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -53,7 +53,7 @@
                     <field name="customer_service_hours" string="Hours (CS)"/>
                 </group>
                 <group>
-                    <field name="rep"/>
+                    <field name="create_uid" string="Rep"/>
                     <!-- <field name="write_uid" string="Last Modified By"/> -->
                     <field name="reviewed_date" string="Reviewed Date"/>
                     <!-- <field name="active" string="Status"/> -->
