--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -78,6 +78,9 @@
             <xpath expr="//group[@name='sale_reporting']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
+            <xpath expr="//field[@name='user_id']" position="attributes">
+                <attribute name="string">Rep</attribute>
+            </xpath>
             <xpath expr="//notebook/page[@name='other_information']" position="after">
                 <page string="Source Details" name="order_details">
                     <group>
