[IMP]- Feature #19314 - add industry in contact, sale and purchase order status report

--- a/bista_orders_report/views/purchase_order_line_view.xml
+++ b/bista_orders_report/views/purchase_order_line_view.xml
@@ -11,6 +11,7 @@
                 <field name="order_id" optional="show"/>
                 <field name="date_order"/>
                 <field name="date_planned" string="Expected Receipt Date" optional="show"/>
+                <field name="industry_id"/>
                 <field name="product_id"/>
                 <field name="price_unit" string="Unit Price" optional="show" widget="monetary"/>
                 <field name="currency_id" optional="hide"/>
