--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -46,6 +46,8 @@
                 <!-- <field name="cc_email" widget="email" context="{'gravatar_image': True}"/> -->
                 <field name="glove_type_ids" widget="many2many_tags" />
             </xpath>
+            <xpath expr="//field[@name='industry_id']" position='replace'>
+            </xpath>
             <xpath expr="//group" position="inside">
                 <group name="customer_service" string="Customer Service">
                     <field name="customer_service_email" string="Email (CS)"/>
@@ -59,6 +61,7 @@
                     <!-- <field name="active" string="Status"/> -->
                     <field name="account_number"/>
                     <field name="top_publisher"/>
+                    <field name="industry_id" attrs="{'invisible': [('is_company', '=', False)]}" options="{'no_create': True}"/>
                     <field name="availability_check"/>
                 </group>
             </xpath>
