--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+    <record id="paperformat_approved_purchase_report" model="report.paperformat">
+        <field name="name">Approved/Purchase Report</field>
+        <field name="default" eval="False"/>
+        <field name="disable_shrinking" eval="True"/>
+        <field name="format">A4</field>
+        <field name="orientation">Portrait</field>
+        <field name="header_spacing">27</field>
+        <field name="margin_top">30</field>
+        <field name="margin_bottom">18</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
+        <field name="header_line">False</field>
+        <field name="dpi">115</field>
+    </record>
 
     <record id="purchase.action_report_purchase_order" model="ir.actions.report">
         <field name="name">Approved Order</field>
         <field name="print_report_name">('Approved Order - %s' % (object.name))</field>
+        <field name="paperformat_id" ref="bista_purchase.paperformat_approved_purchase_report"/>
     </record>
     <record id="purchase.report_purchase_quotation" model="ir.actions.report">
         <field name="name">Purchase Order</field>
         <field name="print_report_name">('Purchase Order - %s' % (object.name))</field>
+        <field name="paperformat_id" ref="bista_purchase.paperformat_approved_purchase_report"/>
     </record>
     <template id="report_purchaseorder_document_extended" inherit_id="purchase.report_purchaseorder_document">
         <xpath expr="//t[@t-call='web.external_layout']" position="attributes">
@@ -219,7 +235,7 @@
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="after">
             <div>
-                <table style="border: 1px solid black; margin-left: auto; width:35.05%;font-size: 14px;">
+                <table style="border: 1px solid black; margin-left: auto; width:35%;font-size: 14px;">
                     <tr class="border-black o_subtotal">
                         <td style="padding-left:10px; width:57.16%; ">
                             <strong>Total W/D</strong>
