--- a/bista_purchase/report/stock_picking.xml
+++ b/bista_purchase/report/stock_picking.xml
@@ -208,7 +208,7 @@
                     <h4>
                         <t t-esc="o.picking_type_id.warehouse_id.name"/>
                     </h4>
-                    <div class="text-right" style="padding-bottom: 20px; margin-left:150px;">
+                    <div class="text-right" style="margin-left:150px;">
                         <t t-esc="o.name"
                            t-options="{'widget': 'barcode', 'width': 310, 'height': 100, 'img_style': 'width:350px;height:55px;'}"
                         />
@@ -338,4 +338,27 @@
             </td>
         </xpath>
     </template>
+
+    <record id="paperformat_stock_picking_report" model="report.paperformat">
+        <field name="name">Invoice/Bill Report</field>
+        <field name="default" eval="False"/>
+        <field name="disable_shrinking" eval="True"/>
+        <field name="format">A4</field>
+        <field name="orientation">Portrait</field>
+        <field name="header_spacing">39</field>
+        <field name="margin_top">40</field>
+        <field name="margin_bottom">18</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
+        <field name="header_line">False</field>
+        <field name="dpi">120</field>
+    </record>
+
+    <record id="stock.action_report_picking" model="ir.actions.report">
+        <field name="paperformat_id" ref="bista_purchase.paperformat_stock_picking_report"/>
+    </record>
+
+    <record id="stock.action_report_delivery" model="ir.actions.report">
+        <field name="paperformat_id" ref="bista_purchase.paperformat_stock_picking_report"/>
+    </record>
 </odoo>
