[FIX]Fixed the tax exemption issue and fixed wrong cover price in bc order issue.
(cherry picked from commit 6e1b100095fc0175943b7d8acedb2bc8a237f629)

--- a/bigcommerce_odoo_integration/views/res_partner.xml
+++ b/bigcommerce_odoo_integration/views/res_partner.xml
@@ -25,6 +25,7 @@
                         <group>
                             <field name="bigcommerce_store_id" readonly="0"/>
                             <field name="bigcommerce_customer_id"/>
+                            <field name="tax_exempt_category" />
                             <field name="is_available_in_bigcommerce" readonly="1"/>
                             <field name="bigcommerce_customer_group_id" />
                         </group>
