[FIX] - Change Request #19333 - changed the type of referred by and referring organization form char to many2one(res.partner)

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -71,8 +71,8 @@
                         <group>
                             <field name="source"/>
                             <field name="source_notes"/>
-                            <field name="referal_source"/>
-                            <field name="referring_organization"/>
+                            <field name="referring_organization" domain="[('company_type', '=', 'company')]"/>
+                            <field name="referal_source" domain="[('company_type', '!=', 'company'),('type', '=', 'contact')]"/>
                             <separator string="Products Purchase"/>
                         </group>
                     </group>
