--- a/bista_sale/views/seller_report_views.xml
+++ b/bista_sale/views/seller_report_views.xml
@@ -11,6 +11,7 @@
                     <field name="product_id"/>
                     <field name="sku"/>
                     <field name="customer_email"/>
+                    <field name="industry_id"/>
                     <field name="quantity"/>
                     <!-- <field name="publication_date"/>
                     <field name="shipping_zip_Code"/>
