--- a/bista_purchase/report/stock_picking.xml
+++ b/bista_purchase/report/stock_picking.xml
@@ -15,32 +15,38 @@
                     </h3>
                     <t t-if="o.state !='done' and o.picking_type_code =='incoming'">
                         <h5 style="font-size: 20px;">Receipt Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='outgoing'">
                         <h5 style="font-size: 20px;">Delivery Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name =='Pick'">
                         <h5 style="font-size: 20px;">Picking Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name !='Pick'">
                         <h5 style="font-size: 20px;">Internal Transfer Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state =='done'">
                         <h5>Validated Date:
+                            <t t-esc="context_timestamp(o.date_done).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
                             <t t-esc="o.date_done" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-else="">
                         <h5 style="font-size: 20px;">Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <h4>
@@ -62,7 +68,7 @@
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm')]/tbody/t/tr/td[1]" position="after">
             <td name="td_format">
-                <span style="font-weight:normal" t-field="o.product_id.product_format"/>
+                <span style="font-weight:normal" t-field="ml.product_id.product_format"/>
             </td>
         </xpath>
         <xpath expr="//div[@name='right_box']" position="replace"/>
@@ -177,32 +183,38 @@
                     </h3>
                     <t t-if="o.state !='done' and o.picking_type_code =='incoming'">
                         <h5 style="font-size: 20px;">Receipt Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='outgoing'">
                         <h5 style="font-size: 20px;">Delivery Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name =='Pick'">
                         <h5 style="font-size: 20px;">Picking Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name !='Pick'">
                         <h5 style="font-size: 20px;">Internal Transfer Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state =='done'">
                         <h5>Validated Date:
-                            <t t-esc="o.date_done" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.date_done).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.date_done" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-else="">
                         <h5 style="font-size: 20px;">Date:
-                            <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.scheduled_date).strftime('%Y-%m-%d')" t-options='{"widget": "date"}'/>
+                            <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <h4>
@@ -313,7 +325,7 @@
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm')]/tbody/tr/td[1]" position="after">
             <td name="th_format">
-                <span style="font-weight:normal" t-field="o.product_id.product_format"/>
+                <span style="font-weight:normal" t-field="move.product_id.product_format"/>
             </td>
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'mt48')]/thead/tr/th[1]" position="after">
